Added New Password Field in the Signup Section

--- a/Student_Home_Login.html
+++ b/Student_Home_Login.html
@@ -24,6 +24,7 @@
 					<input type="text" name="txt" placeholder="User name" required="">
 					<input type="text" name="txt" placeholder="Registration ID" required="">
 					<input type="date" name="DOB" placeholder="DateofBirth" required="">
+					<input type="password" name="pswd" placeholder="New Password" required="">
 					<button>Sign Up</button>
 				</form>
 			</div>
