--- a/grade_tracking.html
+++ b/grade_tracking.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="f3.css">
+<link rel="stylesheet" href="grade_track.css">
 <div class="table-title">
     <h2>GRADE TRACKING</h2>
   </div>
