Updating Designs of all previous pages and creating some new pages for functionality

--- a/Faculty_Home.html
+++ b/Faculty_Home.html
@@ -6,7 +6,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="Faculty_Home_Style.css" />
-		<title>Faculty Login Page</title>
+		<title>Faculty Home Page</title>
 	</head>
 	<body>
 		<div class="menu-wrap">
