--- a/personal_info.html
+++ b/personal_info.html
@@ -20,15 +20,15 @@
         <div>
           <div>
             <ul>
-              <li><a href="#">Student Details</a></li>
-              <li><a href="#">Course Reports</a></li>
-              <li><a href="#">Grade Tracking</a></li>
-              <li><a href="#">Transcript</a></li>
-              <li><a href="#">Attendence</a></li>
-              <li><a href="#">Fees Receipts</a></li>
-              <li><a href="#">Feedbacks</a></li>
-              <li><a href="#">Resources</a></li>
-              <li><a href="#">Broadcasts</a></li>
+              <li><a href="personal_info.html">Personal Details</a></li>
+							<li><a href="Student_Report.html">Course Reports</a></li>
+							<li><a href="grade_tracking.html">Grade Tracking</a></li>
+							<li><a href="Transcript.html">Transcript</a></li>
+							<li><a href="Attendence.html">Attendence</a></li>
+							<li><a href="receipt.html">Fees Receipts</a></li>
+							<li><a href="Feedback.html">Feedbacks</a></li>
+							<li><a href="select_subj.html">Resources</a></li>
+							<li><a href="Broadcast.html">Broadcasts</a></li>
             </ul>
           </div>
         </div>
