--- a/select_subj.html
+++ b/select_subj.html
@@ -5,8 +5,8 @@
 			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="Student_Home_Style.css" />
-		<title>Student Home</title>
+		<link rel="stylesheet" href="select_subj.css" />
+		<title>Feedback</title>
 	</head>
 	<body>
 		<div class="menu-wrap">
@@ -31,10 +31,21 @@
 			</div>
 		</div>
 
-		<header class="showcase">
-			<div class="container showcase-inner">
-				<h1>Welcome to Academic Affairs System</h1>
+		<div class="container">
+			<div class="selector">
+				<label id="labelh" for="Subject">Choose Subject</label>
+				<select name="Subject" id="Subject">
+					<option value="Subject 1">Subject 1</option>
+					<option value="Subject 2">Subject 2</option>
+					<option value="Subject 3">Subject 3</option>
+					<option value="Subject 4">Subject 4</option>
+					<option value="Subject 5">Subject 5</option>
+					<option value="Subject 6">Subject 6</option>
+					<option value="Subject 7">Subject 7</option>
+					<option value="Subject 8">Subject 8</option>
+				</select>
+				<button><a href="Resources.html">Find Resources</a></button>
 			</div>
-		</header>
+		</div>
 	</body>
 </html>
