--- a/Attendence.html
+++ b/Attendence.html
@@ -8,9 +8,8 @@
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="Student_Report.css" />
-    <title>Student Report</title>
-    <title>Document</title>
+    <link rel="stylesheet" href="Attendence.css" />
+    <title>Attendence</title>
   </head>
   <body>
     <div class="menu-wrap">
@@ -38,50 +37,29 @@
       <div class="title">Semester List</div>
       <div class="course-table">
         <table>
-          <th>Sr. No.</th>
-          <th>Semester</th>
-          <th>Registration Date</th>
-          <th>Actions</th>
-          <tr>
-            <td>1</td>
-            <td>1st Semester</td>
-            <td>12/12/2020</td>
-            <td>
-              <button class="btn">View</button>
-            </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>2nd Semester</td>
-            <td>12/3/2021</td>
-            <td>
-              <button class="btn">View</button>
-            </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>3rd Semester</td>
-            <td>12/6/2021</td>
-            <td>
-              <button class="btn">View</button>
-            </td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>4th Semester</td>
-            <td>12/9/2021</td>
-            <td>
-              <button class="btn">View</button>
-            </td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>5th Semester</td>
-            <td>12/12/2021</td>
-            <td>
-              <button class="btn">View</button>
-            </td>
-          </tr>
+          <th>Subject</th>
+          <th>Attendence</th>
+          <th> Total Lectures</th>
+          <tr></tr>
+          <td>Subject 1</td>
+          <td>6</td>
+          <td>10</td>
+          <tr></tr>
+          <td>Subject 2</td>
+          <td>6</td>
+          <td>10</td>
+          <tr></tr>
+          <td>Subject 3</td>
+          <td>6</td>
+          <td>10</td>
+          <tr></tr>
+          <td>Subject 4</td>
+          <td>6</td>
+          <td>10</td>
+          <tr></tr>
+          <td>Subject 5</td>
+          <td>6</td>
+          <td>10</td>
         </table>
       </div>
     </div>
