--- a/admin_home.html
+++ b/admin_home.html
@@ -1,59 +1,34 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Admin Home</title>
-	<link rel="stylesheet" type="text/css" href="admin_home.css">
-</head>
-<style>
-    body {
-        margin: 0;
-	padding: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	min-height: 100vh;
-	font-family: 'Jost', sans-serif;
-	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
-    }
+<html lang="en">
+	<head>
+		<link
+			href="https://fonts.googleapis.com/css?family=Roboto"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="admin_home.css" />
+		<title>Admin Home</title>
+	</head>
+	<body>
+		<div class="menu-wrap">
+			<input type="checkbox" class="toggler" />
+			<div class="hamburger"><div></div></div>
+			<div class="menu">
+				<div>
+					<div>
+						<ul>
+							<li><a href="#">Student Information</a></li>
+							<li><a href="#">Faculty Information</a></li>
+							<li><a href="#">Broadcasts</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
 
-    .button {
-        height: 40px;
-	    margin: 10px auto;
-	    justify-content: center;
-	    display: block;
-	    color: #fff;
-	    background: #573b8a;
-	    font-size: 1em;
-	    font-weight: bold;
-	    margin-top: 20px;
-	    outline: none;
-	    border: none;   
-    	border-radius: 5px;
-	    transition: .2s ease-in;
-	    cursor: pointer;
-}
-    </style>
-<body>
-
-
-	<header>
-		<h1>WELCOME</h1>
-		<nav>
-			<ul>
-                <div class="button-group">
-                    <button>Home</button><br><br>
-                    <button>Students</button><br><br>
-                    <button>Courses</button><br><br>
-                    <button>Teachers</button><br><br><br>
-                    <button>Logout</button>
-                  </div>
-				
-			</ul>
-		</nav>
-	</header>
-
-	
-
-	
-</body>
+		<header class="showcase">
+			<div class="container showcase-inner">
+				<h1>Welcome to Academic Affairs System</h1>
+			</div>
+		</header>
+	</body>
 </html>
