--- a/receipt.html
+++ b/receipt.html
@@ -4,92 +4,74 @@
 <head>
     <title>Fees Receipt</title>
     <link rel="stylesheet" type="text/css" href="receipt.css">
-    <style>
-        th {
-            width: 80px;
-            padding: 1px;
-        }
-
-        td {
-            width: 80px;
-        }
-    </style>
 </head>
 
 <body>
-
-    <div class="container">
-        <div class="header">
-            <h1>Fees Receipt</h1>
-        </div>
-        <div class="receipt">
-
-            <table>
-                <tr>
-                    <th colspan="2">
-                        <h2>Student Details</h2>
-                    </th>
-                </tr>
-
-                <tr>
-                    <td>Student Name</td>
-                    <td>Yash Chauhan</td>
-                </tr>
-                <tr>
-                    <td>Semester</td>
-                    <td>4</td>
-                </tr>
-                <tr>
-                    <td>Student ID</td>
-                    <td>2020010082</td>
-                </tr>
-
-
-                <table>
-                    <tr>
-                        <th colspan="2">
-                            <h2>Fee Details</h2>
-                        </th>
-                    </tr>
-                    <tr>
-                        <td>Tuition Fee</td>
-                        <td>50000 &#8377;</td>
-                    </tr>
-                    <tr>
-                        <td>Courses Fee</td>
-                        <td>5000 &#8377;</td>
-                    </tr>
-                    <tr>
-                        <td>Hostel Fee</td>
-                        <td>25000 &#8377;</td>
-                    </tr>
-                    <tr class="highlight-row">
-                        <td>Total</td>
-                        <td>80000 &#8377;</td>
-                    </tr>
-                </table>
-
-
-                <table>
-                    <tr>
-                        <th colspan="2">
-                            <h2>Payment Details</h2>
-                        </th>
-                    </tr>
-                    <tr>
-                        <td>Payment Date</td>
-                        <td>21 March 2023</td>
-                    </tr>
-                    <tr>
-                        <td>Payment Mode</td>
-                        <td>Online</td>
-                    </tr>
-                </table>
-
+    <div class="menu-wrap">
+        <input type="checkbox" class="toggler" />
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
+            <div>
+                <div>
+                    <ul>
+                        <li><a href="personal_info.html">Personal Details</a></li>
+                        <li><a href="Student_Report.html">Course Reports</a></li>
+                        <li><a href="grade_tracking.html">Grade Tracking</a></li>
+                        <li><a href="Transcript.html">Transcript</a></li>
+                        <li><a href="Attendence.html">Attendence</a></li>
+                        <li><a href="receipt.html">Fees Receipts</a></li>
+                        <li><a href="Feedback.html">Feedbacks</a></li>
+                        <li><a href="select_subj.html">Resources</a></li>
+                        <li><a href="Broadcast.html">Broadcasts</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
-    <button type="button" class="myButton" onclick="location.href='select_sem.html'">OK</button><br>
+    <div class="container">
+        <div class="title">Semester List</div>
+        <div class="course-table">
+            <table>
+                <th>Semester</th>
+                <th>Installment 1</th>
+                <th>Installment 2</th>
+                <tr></tr>
+                <td>Semester 1</td>
+                <td><a href="#">Download</a></td>
+                <td><a href="#">Download</a></td>
+                <tr></tr>
+                <td>Semester 2</td>
+                <td><a href="#">Download</a></td>
+                <td><a href="#">Download</a></td>
+                <tr></tr>
+                <td>Semester 3</td>
+                <td><a href="#">Download</a></td>
+                <td><a href="#">Download</a></td>
+                <tr></tr>
+                <td>Semester 4</td>
+                <td><a href="#">Download</a></td>
+                <td><a href="#">Download</a></td>
+                <tr></tr>
+                <td>Semester 5</td>
+                <td><a href="#">Download</a></td>
+                <td><a href="#">Download</a></td>
+                <tr></tr>
+                <td>Semester 6</td>
+                <td><a href="#">Download</a></td>
+                <td><a href="#">Download</a></td>
+                <tr></tr>
+                <td>Semester 7</td>
+                <td><a href="#">Download</a></td>
+                <td><a href="#">Download</a></td>
+                <tr></tr>
+                <td>Semester 8</td>
+                <td><a href="#">Download</a></td>
+                <td><a href="#">Download</a></td>
+                
+            </table>
+        </div>
+      </div>
 </body>
 
 </html>
