Initial HTML Version 1 of Website with all Webpages

--- a/Student_Report.html
+++ b/Student_Report.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="Student_Report.css" />
-    <title>Student Report</title>
+    <title>Course Report</title>
     <title>Document</title>
   </head>
   <body>
@@ -35,52 +35,60 @@
       </div>
     </div>
     <div class="container">
-      <div class="title">Semester List</div>
+      <div class="title">Course Reports</div>
       <div class="course-table">
         <table>
-          <th>Sr. No.</th>
-          <th>Semester</th>
-          <th>Registration Date</th>
-          <th>Actions</th>
+          <th>Event</th>
+          <th>Marks</th>
+          <th>Avg Marks</th>
+          <th>Total Marks</th>
           <tr>
-            <td>1</td>
-            <td>1st Semester</td>
-            <td>12/12/2020</td>
-            <td>
-              <button class="btn">View</button>
-            </td>
+            <td>Quiz 1</td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
-            <td>2</td>
-            <td>2nd Semester</td>
-            <td>12/3/2021</td>
-            <td>
-              <button class="btn">View</button>
-            </td>
+            <td>Assignment 1</td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
-            <td>3</td>
-            <td>3rd Semester</td>
-            <td>12/6/2021</td>
-            <td>
-              <button class="btn">View</button>
-            </td>
+            <td>Test 1</td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
-            <td>4</td>
-            <td>4th Semester</td>
-            <td>12/9/2021</td>
-            <td>
-              <button class="btn">View</button>
-            </td>
+            <td>Quiz 2</td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
-            <td>5</td>
-            <td>5th Semester</td>
-            <td>12/12/2021</td>
-            <td>
-              <button class="btn">View</button>
-            </td>
+            <td>Assignment 2</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Test 2</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Assignment 3</td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td>Final Test</td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
         </table>
       </div>
