--- a/receipt.html
+++ b/receipt.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="container">
-        <div class="title">Semester List</div>
+        <div class="title">Fees</div>
         <div class="course-table">
             <table>
                 <th>Semester</th>
