--- a/Faculty_Home.html
+++ b/Faculty_Home.html
@@ -16,10 +16,10 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="#">Faculty Details</a></li>
-							<li><a href="#">Course Reports</a></li>
-							<li><a href="#">Maintain course info</a></li>
-							<li><a href="#">Broadcasts</a></li>
+							<li><a href="FacultyDetails.html">Faculty Details</a></li>
+							<li><a href="Faculty_Course_Report.html">Course Reports</a></li>
+							<li><a href="Faculty_Resources.html">Maintain course info</a></li>
+							<li><a href="Broadcast.html">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
