--- a/admin_home.html
+++ b/admin_home.html
@@ -16,9 +16,9 @@
 				<div>
 					<div>
 						<ul>
-							<li><a href="#">Student Information</a></li>
-							<li><a href="#">Faculty Information</a></li>
-							<li><a href="#">Broadcasts</a></li>
+							<li><a href="select_batch.html">Student Information</a></li>
+							<li><a href="Faculty_Info.html">Faculty Information</a></li>
+							<li><a href="Admin_Broadcasts.html">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
