--- a/personal_info.html
+++ b/personal_info.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="personal_info.css" />
-    <title>Student Login Page</title>
+    <title>Personal Information</title>
     <title>Document</title>
   </head>
   <body>
