Fixing basic linking error

--- a/FacultyDetails.html
+++ b/FacultyDetails.html
@@ -23,7 +23,7 @@
 							<li><a href="FacultyDetails.html">Faculty Details</a></li>
 							<li><a href="Faculty_Course_Report.html">Course Reports</a></li>
 							<li><a href="Faculty_Resources.html">Maintain course info</a></li>
-							<li><a href="Broadcast.html">Broadcasts</a></li>
+							<li><a href="Faculty_Broadcast.html">Broadcasts</a></li>
 						</ul>
 					</div>
 				</div>
