button to redirect from login page to mainlander

--- a/admin_login.html
+++ b/admin_login.html
@@ -10,13 +10,16 @@
 			<div class="login">
 				<form action="admin_home.html">
 					<label for="chk" aria-hidden="true">Login</label>
-					<input type="username" name="username" placeholder="Username" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
+					<input type="username" name="username" placeholder="Username" required>
+					<input type="password" name="pswd" placeholder="Password" required>
 					<button>Login</button> 
+					
 				</form>
+				<a href="/MainLander.html"><button  class="home-btn">Home</button></a>
 			</div>
-
 			
-	</div>
-</body>
+			
+		</div>
+	</body>
+  </body>
 </html>
