--- a/Faculty_Login.html
+++ b/Faculty_Login.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Faculty Login</title>
 	<link rel="stylesheet" type="text/css" href="Faculty_Login_Style.css">
-<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-	<div class="main">  	
+	<div class="main">
 
 
-			<div class="login">
-				<form action="Faculty_Home.html">
-					<label for="chk" aria-hidden="true">Login</label>
-					<input type="username" name="username" placeholder="Username" required="">
-					<input type="password" name="pswd" placeholder="Password" required="">
-					<button>Login</button> 
-				</form>
-			</div>
+		<div class="login">
+			<form action="Faculty_Home.html">
+				<label for="chk" aria-hidden="true">Login</label>
+				<input type="username" name="username" placeholder="Username" required="">
+				<input type="password" name="pswd" placeholder="Password" required="">
+				<button>Login</button>
+				<a href="/MainLander.html"><button class="home-btn">Home</button></a>
+			</form>
+		</div>
 
 
-			
+
 	</div>
 </body>
+
 </html>
