--- a/Student_Home_Login.html
+++ b/Student_Home_Login.html
@@ -17,6 +17,7 @@
 					<input type="password" name="pswd" placeholder="Password" required="">
 					<button>Login</button> 
 				</form>
+				<a href="/MainLander.html"><button  class="home-btn">Home</button></a>
 			</div>
 			<div class="signup" >
 				<form action="Student_Home.html">
@@ -27,6 +28,7 @@
 					<input type="password" name="pswd" placeholder="New Password" required="">
 					<button>Sign Up</button>
 				</form>
+				<a href="/MainLander.html"><button  class="home-btn">Home</button></a>
 			</div>
 
 			
