--- a/FacultyDetails.html
+++ b/FacultyDetails.html
@@ -24,6 +24,7 @@
 							<li><a href="Faculty_Course_Report.html">Course Reports</a></li>
 							<li><a href="Faculty_Resources.html">Maintain course info</a></li>
 							<li><a href="Faculty_Broadcast.html">Broadcasts</a></li>
+							<li><a href="MainLander.html">Log Out</a></li>
 						</ul>
 					</div>
 				</div>
