--- a/Student_Report.html
+++ b/Student_Report.html
@@ -29,6 +29,7 @@
 							<li><a href="Feedback.html">Feedbacks</a></li>
 							<li><a href="select_subj.html">Resources</a></li>
 							<li><a href="Broadcast.html">Broadcasts</a></li>
+		    <li><a href="MainLander.html">Log Out</a></li>
             </ul>
           </div>
         </div>
