--- a/MainLander.html
+++ b/MainLander.html
@@ -1,23 +1,79 @@
+
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<link
-			href="https://fonts.googleapis.com/css?family=Roboto"
-			rel="stylesheet"
-		/>
-		<link rel="stylesheet" href="Main_Lander.css" />
-		<title>Academic Affairs System</title>
-	</head>
-	<body>
-		<div class="heading">
-			<h1>Welcome to Academic Affairs System</h1>
-		</div>
-        <div class="Container">
-            <div class="Selection">
-                <div class="btn"><a href="admin_login.html"><button><p>Admin Login</p></button></a></div>
-                <div class="btn"><a href="Student_Home_Login.html"><button><p>Student Login</p></button></a></div>
-                <div class="btn"><a href="Faculty_Login.html"><button><p>Faculty Login</p></button></a></div>
+    <head>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
+        <title>Academic Affairs System</title>
+        <style>
+            body {
+                background-color: rgba(13, 110, 139, 0.75);
+                font-family: 'Roboto', sans-serif;
+                line-height: 1.4;
+            }
+            .header {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 20vh;
+                background-color: white;
+                color: #0d6e8b;
+            }
+            .header h1 {
+                font-size: 3rem;
+            }
+            .container {
+                margin: auto;
+                margin-top: 10vh;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                height: 70vh;
+            }
+            .btn {
+                margin-bottom: 2rem;
+            }
+            .btn a {
+                text-decoration: none;
+            }
+            button {
+                background-color: white;
+                color: #0d6e8b;
+                border: 0;
+                border-radius: 15px;
+                font-size: 1.5rem;
+                padding: 1rem 2rem;
+                cursor: pointer;
+                transition: opacity 0.5s ease-in-out;
+            }
+            button:hover {
+                opacity: 0.8;
+            }
+            @media screen and (max-width: 768px) {
+                .header h1 {
+                    font-size: 2.5rem;
+                }
+                button {
+                    font-size: 1.2rem;
+                    padding: 0.8rem 1.5rem;
+                }
+            }
+        </style>
+    </head>
+    <body>
+        <div class="header">
+            <h1>Welcome to Academic Affairs System</h1>
+        </div>
+        <div class="container">
+            <div class="btn">
+                <a href="admin_login.html"><button>Admin Login</button></a>
+            </div>
+            <div class="btn">
+                <a href="Student_Home_Login.html"><button>Student Login</button></a>
+            </div>
+            <div class="btn">
+                <a href="Faculty_Login.html"><button>Faculty Login</button></a>
             </div>
         </div>
-	</body>
+    </body>
 </html>
