updates personal info for student

--- a/personal_info.html
+++ b/personal_info.html
@@ -36,80 +36,64 @@
       </div>
     </div>
     <div class="student-profile py-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-4">
-              <div class="card shadow-sm">
-                <div class="card-header bg-transparent text-center">
-                  <img class="profile_img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTI3e0IJIPpQdAgLp6-Uxdbns2tj7Y7PIZ2z_il0OPzqA&s" alt="student dp">
-                  <h3>Akash Patel</h3>
-                </div>
-                <div class="card-body">
-                  <p class="mb-0"><strong class="pr-1">Student ID: </strong>202001095</p>
-                  <p class="mb-0"><strong class="pr-1">Course: </strong>Btech ICT</p>
-                  
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-8">
-              <div class="card shadow-sm">
-                <div class="card-header bg-transparent border-0">
-                    <br>
-                  <h3 class="mb-0"><i class="far fa-clone pr-1"></i>General Information:</h3>
-                </div>
-                <div class="card-body pt-0">
-                  <table class="table table-bordered">
-                    <tr>
-                      <th width="30%">Date of Birth</th>
-                      <td width="2%">:</td>
-                      <td><input type="date" name="username" placeholder="" required=""></td>
-                    </tr>
-                    <tr>
-                      <th width="30%">Gender</th>
-                      <td width="2%">:</td>
-                      <td><input style="font-size: 10px ;" type="radio" name="gender" value="male"> Male
-                        <input type="radio" name="gender" value="female"> Female</td>
-                    </tr>
-                    <tr>
-                        <th width="30%">Qualifying Year	</th>
-                        <td width="2%">:</td>
-                        <td><input type="number" name="username" placeholder="" required=""></td>
-                      </tr>
-                    <tr>
-                      <th width="30%">Qualifying Percentage</th>
-                      <td width="2%">:</td>
-                      <td><input type="number" name="username" placeholder="" required=""></td>
-                    </tr>
-                    <tr>
-                      <th width="30%">Blood Group</th>
-                      <td width="2%">:</td>
-                      <td><input type="text" name="username" placeholder="" required=""></td>
-                    </tr>
-                    <tr>
-                        <th width="30%">Identification Mark</th>
-                        <td width="2%">:</td>
-                        <td><input type="text" name="username" placeholder="" required=""></td>
-                      </tr>
-                      <tr>
-                        <th width="30%">Address</th>
-                        <td width="2%">:</td>
-                        <td><input type="text" name="username" placeholder="" required=""></td>
-                      </tr>
-                  </table>
-                </div>
-              </div>
-                <div style="height: 26px"></div>
-              <div class="card shadow-sm">
-                <div class="card-header bg-transparent border-0">
-                  <h3 class="mb-0"><i class="far fa-clone pr-1"></i>Other Information</h3>
-                </div>
-                <div class="card-body pt-0">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4">
+						<div class="card shadow-sm">
+							<div class="card-header bg-transparent text-center">
+								<img
+									class="profile_img"
+									src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTI3e0IJIPpQdAgLp6-Uxdbns2tj7Y7PIZ2z_il0OPzqA&s"
+									alt="student dp"
+								/>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-8">
+						<div class="card shadow-sm">
+							<div class="card-header bg-transparent border-0">
+								<br />
+								<h3 class="mb-0">
+									<i class="far fa-clone pr-1"></i>General Information:
+								</h3>
+							</div>
+							<div>
+								<table>
+									<tr>
+										<td>Student ID</td>
+										<td>1</td>
+									</tr>
+									<tr>
+										<td>Name</td>
+										<td>Akash Patel</td>
+									</tr>
+									<tr>
+										<td>Gender</td>
+										<td>Male</td>
+									</tr>
+									<tr>
+										<td>Email</td>
+										<td>abcd@gmail.com</td>
+									</tr>
+									<tr>
+										<td>Date of Birth</td>
+										<td>01/01/2001
+										</td>
+									</tr>
+									<tr>
+										<td>Date of Registration</td>
+										<td>12-03-2021</td>
+									</tr>
+                  <tr>
+										<td>Contact Number</td>
+										<td>1234567890</td>
+									</tr>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
   </body>
 </html>
