--- a/MainLander.html
+++ b/MainLander.html
@@ -1,64 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
         <title>Academic Affairs System</title>
-        <style>
-            body {
-                background-color: rgba(13, 110, 139, 0.75);
-                font-family: 'Roboto', sans-serif;
-                line-height: 1.4;
-            }
-            .header {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                height: 20vh;
-                background-color: white;
-                color: #0d6e8b;
-            }
-            .header h1 {
-                font-size: 3rem;
-            }
-            .container {
-                margin: auto;
-                margin-top: 10vh;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                height: 70vh;
-            }
-            .btn {
-                margin-bottom: 2rem;
-            }
-            .btn a {
-                text-decoration: none;
-            }
-            button {
-                background-color: white;
-                color: #0d6e8b;
-                border: 0;
-                border-radius: 15px;
-                font-size: 1.5rem;
-                padding: 1rem 2rem;
-                cursor: pointer;
-                transition: opacity 0.5s ease-in-out;
-            }
-            button:hover {
-                opacity: 0.8;
-            }
-            @media screen and (max-width: 768px) {
-                .header h1 {
-                    font-size: 2.5rem;
-                }
-                button {
-                    font-size: 1.2rem;
-                    padding: 0.8rem 1.5rem;
-                }
-            }
-        </style>
+        <link rel="stylesheet" href="Main_Lander.css">
+        
     </head>
     <body>
         <div class="header">
