--- a/Faculty_Course_Report.html
+++ b/Faculty_Course_Report.html
@@ -17,7 +17,7 @@
 					<div>
 						<ul>
 							<li><a href="FacultyDetails.html">Faculty Details</a></li>
-							<li><a href="Faculty_Course_Report.html">Course Reports</a></li>
+							<li><a href="Select_Subject_Faculty.html">Course Reports</a></li>
 							<li><a href="Faculty_Resources.html">Maintain course info</a></li>
 							<li><a href="Faculty_Broadcast.html">Broadcasts</a></li>
 							<li><a href="MainLander.html">Log Out</a></li>
