--- a/Faculty_Home.html
+++ b/Faculty_Home.html
@@ -20,7 +20,6 @@
 							<li><a href="Select_Subject_Faculty.html">Course Reports</a></li>
 							<li><a href="Faculty_Resources.html">Maintain course info</a></li>
 							<li><a href="Faculty_Broadcast.html">Broadcasts</a></li>
-							<li><a href="MainLander.html">Log Out</a></li>
 						</ul>
 					</div>
 				</div>
@@ -31,6 +30,8 @@
 			<div class="container showcase-inner">
 				<h1>Welcome to Academic Affairs System</h1>
 			</div>
+
 		</header>
+		<div><button>LOG OUT</button> </div>
 	</body>
 </html>
