--- a/Faculty_Info.html
+++ b/Faculty_Info.html
@@ -19,6 +19,7 @@
 							<li><a href="select_batch.html">Student Information</a></li>
 							<li><a href="Faculty_Info.html">Faculty Information</a></li>
 							<li><a href="Admin_Broadcasts.html">Broadcasts</a></li>
+							<li><a href="Feedback_Subject_Select_Admin.html">Feedbacks</a></li>
 							<li><a href="MainLander.html">Log Out</a></li>
 						</ul>
 					</div>
