--- a/Feedback_Subject_Select_Admin.html
+++ b/Feedback_Subject_Select_Admin.html
@@ -5,8 +5,8 @@
 			href="https://fonts.googleapis.com/css?family=Roboto"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="select_batch.css" />
-		<title>Batch Select</title>
+		<link rel="stylesheet" href="Feedback_Subject_Select_Admin.css" />
+		<title>Admin Home</title>
 	</head>
 	<body>
 		<div class="menu-wrap">
@@ -29,18 +29,14 @@
 
 		<div class="container">
 			<div class="selector">
-				<label id="labelh" for="Batch">Choose Batch</label>
-				<select name="Batch" id="Batch">
-					<option value="Batch 1">Batch 1</option>
-					<option value="Batch 2">Batch 2</option>
-					<option value="Batch 3">Batch 3</option>
-					<option value="Batch 4">Batch 4</option>
-					<option value="Batch 5">Batch 5</option>
-					<option value="Batch 6">Batch 6</option>
-					<option value="Batch 7">Batch 7</option>
-					<option value="Batch 8">Batch 8</option>
+				<label id="labelh" for="Subject">Choose Subject</label>
+				<select name="Subject" id="Subject">
+					<option value="Subject 1">Subject 1</option>
+					<option value="Subject 2">Subject 2</option>
+					<option value="Subject 3">Subject 3</option>
+					<option value="Subject 4">Subject 4</option>
 				</select>
-				<button><a href="Student_Info.html">Find Info</a></button>
+				<button><a href="Admin_Feedback.html">View Feedbacks</a></button>
 			</div>
 		</div>
 	</body>
