--- a/Student_Home.html
+++ b/Student_Home.html
@@ -25,6 +25,7 @@
 							<li><a href="Feedback.html">Feedbacks</a></li>
 							<li><a href="select_subj.html">Resources</a></li>
 							<li><a href="Broadcast.html">Broadcasts</a></li>
+							<li><a href="MainLander.html">Log Out</a></li>
 						</ul>
 					</div>
 				</div>
@@ -38,6 +39,5 @@
 				<h1>Welcome to Academic Affairs System</h1>
 			</div>
 		</header>
-		<div><button>LOG OUT</button> </div>
 	</body>
 </html>
